[package]
name = "disktui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
futures = "0.3"
serde_json = "1"
tui-input = "0.12"
libc = "0.2"
dirs = "5"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
