[package]
name = "disktui"
version = "1.3.0"
edition = "2024"
authors = ["Maciej <macrionyn@proton.me>"]
description = "A terminal-based disk management utility built with Rust and Ratatui"
license = "MIT"
repository = "https://github.com/Maciejonos/disktui"
readme = "README.md"
keywords = ["tui", "disk", "partition", "cli", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
anyhow = "1"
futures = "0.3"
serde_json = "1"
tui-input = "0.14"
libc = "0.2"
dirs = "6"

[[bin]]
name = "disktui"
path = "src/main.rs"

[[bin]]
name = "disktui-helper"
path = "src/bin/disktui-helper.rs"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
